blocks/modal.css
/* Base styles for modal */
.modal {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 999;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 19px;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease, visibility 0.3s ease;
}

/* When modal is open */
.modal_opened {
  opacity: 1;
  visibility: visible;
}

/* Styles for modal container */
.modal__container {
  display: flex;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 1);
  margin: auto;
  padding: 36px;
  border-radius: 10px;
  position: relative;
  width: 358px;
  height: 259.5px;
}

/* Header styles */
.modal__header {
  color: black;
  width: 100%;
  height: 23px;
  font-weight: 900;
  font-size: 24px;
  line-height: 29.05px;
  margin: 0 0 54px;
}

/* Save button styles */
.modal__save {
  height: 50.15px;
  width: 358px;
  margin: 0;
  border: 1px solid white;
  cursor: pointer;
  background-color: black;
  color: white;
  font-weight: 400;
  font-size: 18px;
  line-height: 21.78px;
  border-radius: 2px;
  padding: 0;
}

.modal__save:hover {
  opacity: 80%;
}

/* Adjusted save button styles when an error is present */
.modal__input:invalid ~ .modal__save {
  background-color: rgba(
    255,
    255,
    255,
    1
  ); /* Same background color as the modal */
  border: 1px solid rgba(0, 0, 0, 0.2);
  color: rgba(0, 0, 0, 0.2);
}

/* Disabled save button styles */
.modal__save_disabled {
  background-color: rgba(0, 0, 0, 0.8);
  cursor: not-allowed;
}

/* Close button styles */
.modal__close {
  background-image: url("../images/Close.svg");
  border: none;
  background-color: transparent;
  height: 40px;
  width: 40px;
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute;
  bottom: calc(100% + 6px);
  left: calc(100% + 6px);
  cursor: pointer;
  z-index: 1000;
}

.modal__close:hover {
  opacity: 60%;
}

/* Specific styles for the close button in the preview modal */
.modal__close--preview {
  position: absolute;
  top: -42px;
  right: -30px;
}

/* Input styles */
.modal__input {
  display: block;
  width: 358px;
  height: 27.26px;
  font-size: 14px;
  font-weight: 400;
  line-height: 16.94px;
  color: black;
  border: none;
  box-shadow: none;
  outline: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* Neutral border */
  padding: 0;
  background: transparent;
}

/* Invalid input styles */
.modal__input.invalid {
  border-bottom: 2px solid rgba(255, 0, 0, 1); /* Red border on invalid input */
}

/* Wrapper around input and error to manage spacing */
.modal__input-wrapper {
  position: relative;
  margin-bottom: 30px; /* Default space between inputs */
}

/* Specific styling for the description input in the Edit Profile modal */
#profile-description-input-wrapper {
  margin-bottom: 48px; /* Space between the description input and the save button */
}

/* Common styles for input error messages */
.modal__input-error {
  position: absolute;
  bottom: -20px; /* Ensure the error message is 5px below the input line */
  left: 0;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 14.52px;
  color: rgba(255, 0, 0, 1);
  display: none; /* Initially hidden */
  width: 100%;
  min-height: 14.52px; /* Ensures space for one line of text */
}

/* Error message visible when input is invalid */
.modal__input-error_active {
  display: block;
}

/* Adjust the wrapper height to account for potential two-line error messages */
.modal__input-wrapper.error-visible {
  margin-bottom: 44px; /* Increased space to accommodate a two-line error message */
}

/* Preview modal container styles */
.modal__container--preview {
  border: none;
  box-shadow: none;
  background-color: transparent;
  max-width: 75vw;
  max-height: 75vh;
  padding: 0;
  position: relative;
  display: flex;
  flex-direction: column;
  margin: auto;
}

/* Image in the preview modal */
.modal__image {
  max-width: 75vw;
  max-height: 75vh;
  height: auto;
  width: auto;
  display: block;
  margin: 0;
  padding: 0;
}

/* Caption in the preview modal */
.modal__caption {
  color: white;
  text-align: left;
  font-weight: 400;
  font-size: 12px;
  line-height: 14.52px;
  margin-top: 10px;
}

/* Responsive styles */
@media (max-width: 768px) {
  .modal__container {
    width: 282px;
  }

  .modal__close {
    width: 26px;
    height: 26px;
    top: -45px;
    right: 0;
    bottom: auto;
    left: auto;
  }

  .modal__header {
    margin-bottom: 75px;
    font-size: 18px;
    line-height: 21.78px;
  }

  .modal__input {
    width: calc(100% - 16px);
  }

  .modal__input:last-of-type {
    margin-bottom: 45px;
  }

  .modal__save {
    width: 100%;
    height: 46px;
    align-self: center;
    font-size: 14px;
    line-height: 16.94px;
  }

  .modal__container--preview {
    max-width: 90vw;
    max-height: 90vh;
  }

  /* Ensure .modal__close--preview remains unaffected by media queries */
  .modal__close--preview {
    top: -30px;
    right: -30px;
  }
}

